@@ -22,6 +22,7 @@ import jakarta.ws.rs.core.MediaType;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import org.apache.syncope.client.ui.commons.annotations.BinaryPreview;
 import org.apache.syncope.common.rest.api.RESTHeaders;
 import org.apache.wicket.Component;
@@ -31,7 +32,6 @@ import org.apache.wicket.markup.html.WebMarkupContainer;
 import org.apache.wicket.markup.html.form.TextArea;
 import org.apache.wicket.markup.html.panel.Fragment;
 import org.apache.wicket.model.Model;
-import org.apache.wicket.util.io.IOUtils;
 
 @BinaryPreview(mimeTypes = { MediaType.APPLICATION_JSON, MediaType.APPLICATION_XML,
     RESTHeaders.APPLICATION_YAML, "application/x-yaml", "text/x-yaml", "text/yaml" })
@@ -52,7 +52,9 @@ public class BinaryTextPreviewer extends BinaryPreviewer {
             try {
                 fragment = new Fragment("preview", "previewFragment", this);
                 InputStream stream = new ByteArrayInputStream(uploadedBytes);
-                TextArea<String> previewer = new TextArea<>("previewer", Model.of(IOUtils.toString(stream)));
+                TextArea<String> previewer = new TextArea<>(
+                        "previewer",
+                        Model.of(new String(stream.readAllBytes(), StandardCharsets.UTF_8)));
                 previewer.setOutputMarkupPlaceholderTag(true);
                 previewerId = previewer.getMarkupId();
                 fragment.add(previewer);
